syntax = "proto3";

option csharp_namespace = "MnemeTester";

package product;

service ProductSearch {
  rpc SearchProducts (ProductSearchRequest) returns (ProductSearchResponse);
}

message ProductSearchRequest {
  repeated float vector = 1;
  int32 limit = 2;
}

message ProductSearchResponse {
  repeated Product products = 1;
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  float score = 4;
}